<package format="2">
  <name>collada_parser</name>
  <version>1.12.12</version>
  <description>
    This package contains a C++ parser for the Collada robot
    description format. The parser reads a Collada XML robot
    description, and creates a C++ URDF model. Although it is possible
    to directly use this parser when working with Collada robot
    descriptions, the preferred user API is found in the urdf package.
  </description>

  <author>Rosen Diankov</author>
  <author>Kei Okada</author>
  <author email="isucan@gmail.com">Ioan Sucan</author>
  <author email="jacquelinekay1@gmail.com">Jackie Kay</author>
  <maintainer email="clalancette@osrfoundation.org">Chris Lalancette</maintainer>
  <maintainer email="sloretz@osrfoundation.org">Shane Loretz</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/collada_parser</url>
  <url type="repository">https://github.com/ros/collada_urdf</url>
  <url type="bugtracker">https://github.com/ros/collada_urdf/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_export_depend>urdf</build_export_depend>
  <build_export_depend>urdf_parser_plugin</build_export_depend>

  <build_depend>class_loader</build_depend>
  <build_depend>collada-dom</build_depend>
  <build_depend>libboost-system-dev</build_depend>
  <build_depend>liburdfdom-headers-dev</build_depend>
  <!-- <build_depend>rosconsole</build_depend> -->
  <build_depend>urdf</build_depend>
  <build_depend>urdf_parser_plugin</build_depend>

  <exec_depend>class_loader</exec_depend>
  <exec_depend>collada-dom</exec_depend>
  <build_depend>libboost-system-dev</build_depend>
  <!-- <exec_depend>rosconsole</exec_depend> -->
  <exec_depend>urdf_parser_plugin</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

