<package format="2">
  <name>collada_urdf</name>
  <version>1.12.10</version>
  <description>
    This package contains a tool to convert Unified Robot Description Format (URDF) documents into COLLAborative Design Activity (COLLADA) documents.

    Implements robot-specific COLLADA extensions as defined by
    http://openrave.programmingvision.com/index.php/Started:COLLADA
  </description>

  <author>Tim Field</author>
  <author>Rosen Diankov</author>
  <author email="isucan@gmail.com">Ioan Sucan</author>
  <author email="jacquelinekay1@gmail.com">Jackie Kay</author>
  <maintainer email="clalancette@osrfoundation.org">Chris Lalancette</maintainer>
  <maintainer email="sloretz@osrfoundation.org">Shane Loretz</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/collada_urdf</url>
  <url type="repository">https://github.com/ros/collada_urdf</url>
  <url type="bugtracker">https://github.com/ros/collada_urdf/issues</url>

  <buildtool_depend version_gte="0.5.68">catkin</buildtool_depend>

  <build_export_depend>liburdfdom-headers-dev</build_export_depend>

  <build_depend>angles</build_depend>
  <build_depend>assimp-dev</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>collada-dom</build_depend>
  <build_depend>collada_parser</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>geometric_shapes</build_depend>
  <build_depend>liburdfdom-dev</build_depend>
  <build_depend>liburdfdom-headers-dev</build_depend>
  <build_depend>resource_retriever</build_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>urdf</build_depend>

  <exec_depend>assimp</exec_depend>
  <exec_depend>collada-dom</exec_depend>
  <exec_depend>collada_parser</exec_depend>
  <exec_depend>geometric_shapes</exec_depend>
  <exec_depend>liburdfdom-dev</exec_depend>
  <exec_depend>resource_retriever</exec_depend>
  <exec_depend>rosconsole</exec_depend>
  <exec_depend>urdf</exec_depend>

</package>
